添加 redis数据缓存库, jedis存取数据